Revision history for App::MCP::Worker

          - Adds logging class
          - Encrypt/decrypt of user password uses default
          - Removed Class::Usul dependency
          - Updated code and default api paths
          - Dropped dependency on Regexp::Common
            That module has had installation and indexing problems for
            some time 249f54a8-b08e-11e5-9304-6ec2af845ad4 and RT#110771
          - Moved user_name attribute to ClientAuth
          - Update dependency version
          - Toolchain update
          - Switched to lexical subs
          - Using AS_PASSWORD in user prompts
          - Shaved throw calls
          - Started logging _run_command errors
          - Added create_job test
          - Job creation API works with new Request object
          - Fixed copyright_holder
          - Replaced namespace::sweep with autoclean
          - Added ::Roles
          - SRP API authentication complete
          - Replaced DH key exchange with SRP::Blowfish
          - Now with DH key exchange
          - Added host authentication
          - Added user authentication
          - Serialize with JSON not Storable
          - Added job creation

0.2.1     2013-08-22 00:22:47
          - Switched to using Dist::Zilla

0.1.6     2013-08-22 00:21:16
          - Converted from SVN to Git
          - Created
