@@ -3,13 +3,13 @@ package App::MCP::Worker::Config;
 use File::DataClass::IO qw( io );
 use Moo;
 
-has 'appclass' => is => 'ro', default => 'App::MCP::Worker';
+has 'appclass' => is => 'ro', required => 1;
 
 has 'logfile' =>
    is      => 'lazy',
-   default => sub { shift->my_home->catfile('.app-mcp-worker.log') };
+   default => sub { shift->home->catfile('.app-mcp-worker.log') };
 
-has 'my_home' => is => 'ro', default => sub { io '.' };
+has 'home' => is => 'ro', default => sub { io '.' };
 
 has 'prefix' => is => 'ro', default => 'mcp';
 
